Update DefaultMessageService.java (#127)